# qrllib

./: .codacy.yml  .coveragerc  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  CMakeLists.txt.gtest.in  Cargo.toml  LICENSE  MANIFEST.in  README.md  WORKSPACE  appveyor.yml  av_build.cmd  build.rs  build.sh  build_webassembly.sh  ci_test.sh  clean_build.sh  deps.bzl  go.mod  keys.tar.enc  package.json  pytest.ini  requirements.txt  run_tests.sh  setup.cfg  setup.py
.circleci/: bash_env.sh  build_emscripten.sh  config.yml  install_node.sh  setup_emscripten.sh
cmake/: FindRocksdb.cmake
pyqrllib/: _version.py
scripts/: update_godilithium_flags.sh  update_gokyber_flags.sh  update_goqrllib_flags.sh
src/: lib.rs
src/api/: api.cxx  api.h  api.i  dilithium.i  kyber.i  pyqrllib.i  qrl.i
src/dilithium/: dilithium.cpp  dilithium.h
src/jswrapper/: jsdilwrapper.cpp  jskybwrapper.cpp  jsqrlwrapper.cpp  jswrapper.cpp
src/kyber/: kyber.cpp  kyber.h
src/lib/: PersistentState.cpp  PersistentState.h  dilithium.cpp  dilithium.h  hashing.cpp  hashing.h  library.cpp  library.h  misc.cpp  misc.h  wordlist.cpp  wordlist.h  xmss.cpp  xmss.h  xmssBase.cpp  xmssBase.h  xmssFast.cpp  xmssFast.h  xmssPool.cpp  xmssPool.h  xmssfast.cpp  xmssfast.h
src/lib/crypto/: hashing.h  misc.cpp  wordlist.cpp  wordlist.h  xmss.cpp  xmss.h  xmssBase.cpp  xmssBase.h  xmssPool.cpp  xmssPool.h
src/qrl/: hashing.cpp  hashing.h  misc.cpp  misc.h  qrlAddressFormat.h  qrlDescriptor.h  qrlHelper.h  wordlist.cpp  xmss.cpp  xmss.h  xmssBase.cpp  xmssBase.h  xmssBasic.cpp  xmssBasic.h  xmssFast.cpp  xmssFast.h  xmssPool.cpp  xmssPool.h
src/rust_wrapper/: errors.rs  mod.rs
src/rust_wrapper/dilithium/: dilithium.rs  mod.rs
src/rust_wrapper/qrl/: hashing.rs  misc.rs  mod.rs  qrl_address_format.rs  qrl_descriptor.rs  qrl_helper.rs  wordlist.rs  xmss_base.rs  xmss_basic.rs  xmss_fast.rs  xmss_pool.rs
src/rust_wrapper/shasha/: mod.rs  shasha.rs
src/rust_wrapper/xmss_alt/: algsxmss.rs  algsxmss_fast.rs  fips202.rs  hash.rs  hash_address.rs  hash_functions.rs  mod.rs  wots.rs  xmss_common.rs
src/rustwrapper/: dilithium.rs  dilithium_wrapper.hxx  kyber.rs  mod.rs  wrapper.hxx
src/rustwrapper/dilithium/: dilithium.rs  dilithium_wrapper.c  dilithium_wrapper.h
src/rustwrapper/kyber/: kyber.rs  kyber_wrapper.c  kyber_wrapper.h
src/shasha/: shasha.cpp  shasha.h
src/swig/: api.cxx  api.h  api.i
src/tests/: basic_test.cpp  hashing_test.cpp  leon_test.cpp  misc_test.cpp  test_rocksdb.cpp  word_list.h  xmssComparison_test.cpp  xmssGenericComparison_test.cpp  xmssGeneric_test.cpp  xmssPool_test.cpp  xmss_fast.cpp  xmss_fast_leon.cpp  xmss_fast_test.cpp  xmss_ref.cpp  xmss_test.cpp
src/tests/crypto/: hashing_test.cpp  misc_test.cpp  xmssComparison_test.cpp  xmssGeneric_test.cpp  xmssPool_test.cpp  xmss_fast_leon.cpp  xmss_fast_test.cpp  xmss_test.cpp
src/tests_js/: test.js
src/tests_python/: basic_test.py  test_bin2hstr.py  test_hash.py  test_misc.py  test_sha2.py  test_shake.py  test_vec2hexstr.py  test_xmss.py  test_xmsspool.py
src/util/: hashing.cpp  random.cpp  random.h
src/xmss-alt/: algsxmss.c  algsxmss.h  algsxmss_fast.c  algsxmss_fast.h  algsxmss_internal.h  eHashFunctions.h  fips202.c  hash.c  hash.h  wots.c  wots.h  wots_internal.h  wots_params.h  xmss_common.c  xmss_common.h  xmss_params.h
tests/: mod.rs
tests/cpp/: dilithium_test.cpp  hashing_test.cpp  misc_test.cpp  xmssComparison_test.cpp  xmssPool_test.cpp  xmss_fast_leon.cpp  xmss_fast_test.cpp  xmss_test.cpp
tests/cpp/dilithium/: dilithium_test.cpp  refdilithium_test.cpp
tests/cpp/kyber/: kyber_test.cpp  libkyber_test.cpp  refkyber_test.cpp
tests/cpp/qrl/: hashing_test.cpp  misc_test.cpp  qrlDescriptor.cpp  qrlHelper.cpp  xmssBasicSHA2_test.cpp  xmssBasicSHAKE256_test.cpp  xmssBasic_test.cpp  xmssComparison_test.cpp  xmssFastSHA2_test.cpp  xmssFast_test.cpp  xmssGeneric_test.cpp  xmssPool_test.cpp  xmss_fast_test.cpp
tests/cpp/qrl/deps_altxmss/: xmss_fast_leon.cpp
tests/cpp/shasha/: hashing_test.cpp
tests/golang/misc/: helper.go
tests/golang/tests/: dilithum_test.go  kyber_test.go  misc_test.go  qrlhelper_test.go  sha2_test.go  shake128_test.go  shake256_test.go  xmss_test.go
tests/js/: old_examples.js  package-lock.json  package.json  playwright.config.js  qrllib_test.js  test.html  test.js
tests/js/tests/: qrllib.spec.js
tests/python/: test_dilithium.py  test_kyber.py  test_misc.py  test_qrlhelper.py  test_shake.py  test_xmss.py  test_xmsspool.py
tests/rust/: dilithium_ref_test.rs  dilithium_test.rs  kyber_ref_test.rs  kyber_test.rs  mod.rs  test_kyber.rs  test_kyber_ref.rs
tests/rust/dilithium/: dilithium_ref_test.rs  dilithium_test.rs  mod.rs
tests/rust/kyber/: kyber_ref_test.rs  kyber_test.rs  mod.rs
tests/rust/qrl/: hashing.rs  misc.rs  mod.rs  qrl_descriptor_test.rs  qrl_helper_test.rs  xmss_alt_test.rs  xmss_basic.rs  xmss_basic_sha2.rs  xmss_basic_shake256.rs  xmss_comparison.rs  xmss_fast.rs  xmss_fast_sha2.rs  xmss_generic.rs  xmss_pool.rs
tests/rust/shasha/: hashing_test.rs  mod.rs
travis/: Dockerfile.debian-stretch  Dockerfile.debian-stretch-deps  Dockerfile.stretch  Dockerfile.xenial  Dockerfile.xenial-emscripten  before_install.sh  build.sh  env  keys.tar.enc  merge_debs_ghpages.sh  patch_npmversion.sh  prepare.sh  push_debs_github.sh
travis/debian-stretch/: build.sh
travis/debian-stretch-deps/: build.sh
travis/stretch/: build.sh  push_debs_github.sh
travis/xenial/: build.sh  push_debs_github.sh
travis/xenial-emscripten/: build.sh
xmss-alt/: algsxmss.c  algsxmss.h  algsxmss_fast.c  algsxmss_fast.h  fips202.c  fips202.h  hash.c  hash.h  hash_address.c  hash_address.h  randombytes.c  randombytes.h  try.c  wots.c  wots.h  xmss.c  xmss.h  xmss_common.c  xmss_common.h  xmss_commons.c  xmss_commons.h
